Add db operations for products

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "equalexperts",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.344.0",
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "serverless": "^1.32.0",
     "serverless-http": "^1.8.0"
