Add deployment target

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "shopping cart",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "deploy": "sls deploy"
   },
   "keywords": [
     "interview",
