--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "serverless": "^1.32.0",
-    "serverless-http": "^1.8.0"
+    "serverless-http": "^1.8.0",
+    "uuid": "^3.3.2"
   }
 }
